fix: header description on mobile and links decorations

--- a/assets/src/scss/components/_body.scss
+++ b/assets/src/scss/components/_body.scss
@@ -11,7 +11,7 @@ body {
   font-family: $roboto;
 }
 
-a {
+a, a:where(:not(.wp-element-button)) {
   cursor: pointer;
   text-decoration: none!important;
 }
