--- a/assets/src/scss/components/_header.scss
+++ b/assets/src/scss/components/_header.scss
@@ -23,5 +23,6 @@
   .page-header-content {
     display: block!important;
     margin-top: 0;
+    max-width: 97%;
   }
 }
